--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tốc-ký-âm-thanh---ver-6.1",
+  "name": "nhan-dang-file-am-thanh",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite preview --port $PORT --host"
+    "start": "vite preview --host 0.0.0.0 --port $PORT --strictPort"
   },
   "dependencies": {
     "@google/genai": "^0.8.0",
@@ -18,5 +18,8 @@
     "@types/node": "^22.14.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
