--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port $PORT --strictPort"
+    "start": "echo \"Starting on PORT=${PORT:-4173}\" && npx serve -s dist -l ${PORT:-4173}"
   },
   "dependencies": {
     "@google/genai": "^0.8.0",
+    "docx": "8.5.0",
     "marked": "^4.0.0",
-    "docx": "8.5.0"
+    "serve": "^14.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   },
-  "engines": {
-    "node": ">=18"
-  }
+  "engines": { "node": ">=18" }
 }
